--- a/007/007.md
+++ b/007/007.md
@@ -1,2 +1,69 @@
 # 2019/11/28
 
+## URL パラメーター
+app.get('/', callbackfunc)
+という静的ルートの構築方法を見てきましたが、サーバー構築で重要な部分は動的ルーティングが締めます。
+動的ルーティングにより、アプリケーションはうＲＬで渡されるデータに応じて異なる種類の【王党】国王を支持する党派。を提供する一つのルートを持つことができます。
+
+URLの一部がパラメーターとなるよう設定するには、URLにコロン「:」を追加してから、URLパラメーターに名前をつけます。
+この名前は, `request.params`オブジェクト内のキーに変換されます。
+どのようなものか見てみましょう。URLパラメーターはすべて文字列であることに注意してください。
+```js
+const express = require('express')
+const app = express()
+
+app.get('/', (req, res) => {
+  return res.send("Welcome")
+})
+app.get('/instructor:firstName', (req, res) => {
+  return res.send(`The name of this instructor is ${req.params.firstName}`)
+})
+
+app.listex(3000, () => {
+  consocle.log('The server has started on port 3000. Head to local host:3000 in the browser and see what\'s there!')
+})
+```
+
+ - expressでは、/のあとに:文字列とすることで、URLの値をパラメーターとしてコードに組み込むことができるようになる。
+ - パラメーターには`request.params.文字列`とすることでアクセスすることができる。
+ - パラメーターはすべてstring型で渡される。
+
+
+## Express JSON
+
+ExpressでJSONを返すのは簡単です。
+リスポンスオブジェクトで.json()メソッドを使用するだけです。
+```js
+app.get('/', (req, res => {
+  res.json({ message: 'DONE' })
+}))
+
+app.get('/instructor', (req, res) => {
+  res.json({ name: 'ELITE' })
+})
+```
+
+### .send() vs .json()
+
+Expressからjsonを送信する場合、.json()メソッドか.send()メソッドを使用する事ができます。
+
+２つのメソッドを使用する上での違いはほぼありません。
+.jsonは最後に.sendを呼び出します。
+
+.json()と.send()の主な違いは、Responseを非オブジェクトとして渡す必要がある場合に現れます。
+.jsonは非オブジェクト（null, undeinedなど）をJSONに変換しますが、.sendは非オブジェクトをJSONに変換せずに返します。
+
+.jsonは、アプリケーションで定義された設定を使用して、responseをフォーマットします。
+
+### bodyParser
+前の章で見たように、.jsonメソッドを使用してJSONを返すことは非常に簡単ですが、JSONまたは他の値として送信するときにユーザー入力を受け入れるのは少し面倒です。
+そのためには、body-perseというモジュールを使用する必要があります。
+このモジュールは、respondeのbodyを解析します。
+このモジュールは、middlewareとしてreq/resサイクルの途中で呼び出され、response or requestのいずれかの値をhんこうできます。
+
+外部ミドルウェアを仕様売る場合、３段階のプロセスがあります。
+
+1. インストール - `npm i body-perser`
+2. 呼び出す - `const bodyParser = require('body-perser')`
+3. .useする - `app.use(bodyParser.json())`
+
